--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
 
         <section class="image">
-            <img class="bounce" src="birthday-cake.jpg" alt="Birthday Cake">
+            <img class="bounce" src="birthday-cake.jfif" alt="Birthday Cake">
         </section>
 
         <footer>
