--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
         <footer>
             <p class="fade-in">Have an amazing year ahead! 🥳</p>
         </footer>
+
+        <!-- Play Music Button (hidden by default) -->
+        <button id="play-button" style="display:none;">Play Music 🎶</button>
     </div>
 
     <!-- Background Music -->
-    <audio id="bg-music" autoplay loop>
+    <audio id="bg-music" autoplay muted loop>
         <source src="birthday-song.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
