--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <!-- Background Music -->
-    <audio id="bg-music" autoplay muted loop>
+    <audio id="bg-music" autoplay muted loop playsinline>
         <source src="birthday-song.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
