--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Sparkling lights background -->
+    <div class="sparkling-lights"></div>
+
     <div class="container">
         <header>
             <h1 class="fade-in">🎉 Happy Birthday, Sharika! 🎂</h1>
