--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Sparkling lights background -->
-    <div class="sparkling-lights"></div>
+    <!-- Sparkling lights background on both sides -->
+    <div class="sparkling-lights left"></div>
+    <div class="sparkling-lights right"></div>
 
     <div class="container">
         <header>
-            <h1 class="fade-in">🎉 Happy Birthday, Sharika! 🎂</h1>
+            <h1 class="fade-in">🎉 Happy Birthday, Saira! 🎂</h1>
         </header>
         
         <section class="message">
