--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Link to Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Pacifico&display=swap" rel="stylesheet">
     
+    <!-- Link to CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,7 +19,7 @@
 
     <div class="container">
         <header>
-            <h1 class="fade-in">🎉 Happy Birthday, Saira! 🎂</h1>
+            <h1 class="fade-in">🎉 Happy Birthday, Sharika! 🎂</h1>
         </header>
         
         <section class="message">
