--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <!-- Link to CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background-image: url('sparkling.jpg');background-repeat: no-repeat;">
     <!-- Sparkling lights background on both sides -->
     <div class="sparkling-lights left"></div>
     <div class="sparkling-lights right"></div>
 
-    <div class="container">
+    <div class="container" style="color:#48cae4">
         <header>
             <h1 class="fade-in">🎉 Happy Birthday, Sharika! 🎂</h1>
         </header>
