--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container" style="color:#e01e37">
         <header>
-            <h1 class="fade-in">🎉 Happy Birthday, Sharika! 🎂</h1>
+            <h1 class="fade-in">🎉 Happy Birthday, Saira bhanu! 🎂</h1>
         </header>
         
         <section class="message">
