--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Link to CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-image: url('sparkling.jpg');background-repeat: no-repeat;">
+<body style="background-image: url('sparkling1.gif');background-repeat: no-repeat;">
     <!-- Sparkling lights background on both sides -->
     <div class="sparkling-lights left"></div>
     <div class="sparkling-lights right"></div>
@@ -28,7 +28,7 @@
         </section>
 
         <section class="image">
-            <img class="bounce" src="birthday-cake.jfif" alt="Birthday Cake">
+            <img class="bounce" src="birthday-cake1.gif" alt="Birthday Cake">
         </section>
 
         <footer>
