--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
     <div class="container" style="color:#00b4d8">
         <header>
-            <h1 class="fade-in">🎉 Happy Birthday, Saira bhanu! 🎂</h1>
+            <h1 class="fade-in bounce">🎉 Happy Birthday, Saira bhanu! 🎂</h1>
         </header>
         
         <section class="message">
-            <p class="fade-in">Wishing you a day filled with love, joy, and laughter!</p>
-            <p class="fade-in">May all your dreams come true this year! 🎈</p>
+            <p class="fade-in bounce">Wishing you a day filled with love, joy, and laughter!</p>
+            <p class="fade-in bounce">May all your dreams come true this year! 🎈</p>
         </section>
 
         <section class="image">
