--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="sparkling-lights left"></div>
     <div class="sparkling-lights right"></div>
 
-    <div class="container" style="color:#00b4d8">
+    <div class="container" style="color:#e01e37">
         <header>
             <h1 class="fade-in">🎉 Happy Birthday, Saira bhanu! 🎂</h1>
         </header>
