--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <!-- Link to CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-image: url('sparkling5.gif');background-repeat: no-repeat;">
+<body>
+
+    <!-- Background Video -->
+    <video autoplay muted loop playsinline id="bg-video">
+        <source src="birthday-video.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
     <!-- Sparkling lights background on both sides -->
     <div class="sparkling-lights left"></div>
     <div class="sparkling-lights right"></div>
@@ -35,15 +42,9 @@
             <p class="fade-in">Have an amazing year ahead! 🥳</p>
         </footer>
 
-        <!-- Play Music Button (hidden by default) -->
-        <button id="play-button" style="display:none;">Play Music 🎶</button>
+        <!-- Play Video Button (hidden by default) -->
+        <button id="play-button" style="display:none;">Play Video 🎶</button>
     </div>
-
-    <!-- Background Music -->
-    <audio id="bg-music" autoplay muted loop playsinline>
-        <source src="birthday-song.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
 
     <script src="scripts.js"></script>
 </body>
