--- a/index.html
+++ b/index.html
@@ -14,28 +14,20 @@
 </head>
 <body>
 
-    <!-- Background Video -->
-    <video autoplay muted loop playsinline id="bg-video">
+    <!-- Background Video with Audio -->
+    <video autoplay loop playsinline id="bg-video">
         <source src="birthday-video.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
-    <!-- Sparkling lights background on both sides -->
-    <div class="sparkling-lights left"></div>
-    <div class="sparkling-lights right"></div>
-
     <div class="container" style="color:#e01e37">
         <header>
-            <h1 class="fade-in">🎉 Happy Birthday, Saira bhanu! 🎂</h1>
+            <h1 class="fade-in">🎉 Happy Birthday, Saira Bhanu! 🎂</h1>
         </header>
         
         <section class="message">
             <p class="fade-in">Wishing you a day filled with love, joy, and laughter!</p>
             <p class="fade-in">May all your dreams come true this year! 🎈</p>
-        </section>
-
-        <section class="image">
-            <img class="bounce" src="birthday-cake1.gif" alt="Birthday Cake">
         </section>
 
         <footer>
