Update birthday message for Aby Jacob

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="container" style="color:#e01e37">
         <header>
-            <h1 class="fade-in">🎉 Happy Birthday, Geetha 🎂</h1>
+            <h1 class="fade-in">🎉 Happy Birthday, Aby Jacob 🎂</h1>
         </header>
         
         <section class="message">
